--- a/_src/templates/partials/index.hbs
+++ b/_src/templates/partials/index.hbs
@@ -1,5 +1,5 @@
 <div class="main-container">
-  
+
   <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, veniam!</h1>
 
   <div class="grid-container">
@@ -9,6 +9,6 @@
   </div>
 
   {{#each clips}}
-  <audio data-clip="{{ file }}" src="/assets/sounds/{{ file }}"></audio>
+  <audio data-clip="{{ file }}" src="assets/sounds/{{ file }}"></audio>
   {{/each}}
 </div>
