--- a/_src/assets/stylesheets/styles.scss
+++ b/_src/assets/stylesheets/styles.scss
@@ -72,6 +72,6 @@ body {
   margin: 0;
   padding: 0;
   background-color: #222;
-  background: url('../images/1920.jpg') no-repeat center center;
+  background: url('../images/czarinavirgin.jpg') no-repeat top center;
   background-size: cover;
 }
