add titles, icons

--- a/_src/templates/pages/index.hbs
+++ b/_src/templates/pages/index.hbs
@@ -4,7 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title><h1>The Sounds of CZ</h1></title>
+  <link rel="icon" href="images/icon.png">
+  <link rel="apple-touch-icon" href="assets/images/icon.png"/>
+  <meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-title" content="<h1>The Sounds of CZ</h1>">
   <link rel="stylesheet" href="assets/styles/styles.css">
 </head>
 <body>
