--- a/_src/templates/partials/index.hbs
+++ b/_src/templates/partials/index.hbs
@@ -1,4 +1,5 @@
 <div class="main-container">
+  <h1>The Sounds of CZ</h1>
   <div class="grid-container">
     {{#each clips}}
     <div class="box" data-clip="{{ file }}">{{{ quote }}}</div>
