--- a/_src/templates/pages/index.hbs
+++ b/_src/templates/pages/index.hbs
@@ -4,11 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title><h1>The Sounds of CZ</h1></title>
+  <title>The Sounds of CZ</title>
   <link rel="icon" href="images/icon.png">
   <link rel="apple-touch-icon" href="assets/images/icon.png"/>
   <meta name="apple-mobile-web-app-capable" content="yes">
-	<meta name="apple-mobile-web-app-title" content="<h1>The Sounds of CZ</h1>">
+	<meta name="apple-mobile-web-app-title" content="The Sounds of CZ">
+  <meta name="description" content="Recommended use: during muted client calls, when said clients are acting like real... well, you know, or if you want to pretend she's haunting the coed bathrooms at Mother New York, and on the days you miss her most, when you need a little &quot;shmermp!&quot; to get you by.">
   <link rel="stylesheet" href="assets/styles/styles.css">
 </head>
 <body>
