--- a/_src/assets/stylesheets/styles.scss
+++ b/_src/assets/stylesheets/styles.scss
@@ -16,12 +16,20 @@ $outer-margin: $grid-gap;
   text-align: center;
   margin: auto;
   h1 {
-    color: white;
-    padding: 0 1rem;
     font-size: 2rem;
     @media (max-width: 768px) {
       font-size: 1.5rem;
     }
+  }
+  h3 {
+    max-width: 520px;
+    margin: 0 auto 2rem;
+    line-height: 1.6;
+  }
+  h1, h3 {
+    color: white;
+    padding: 0 1rem;
+    text-shadow: 0 0 30px black;
   }
 }
 
@@ -75,4 +83,7 @@ body {
   background-color: #222;
   background: url('../images/czarinavirgin.jpg') no-repeat top center;
   background-size: cover;
+  @media (max-width: 480px) {
+    font-size: 10px;
+  }
 }
