--- a/_src/templates/partials/index.hbs
+++ b/_src/templates/partials/index.hbs
@@ -1,6 +1,6 @@
 <div class="main-container">
-  <h1>The Sounds of CZ</h1>
-  <h3>Recommended use: during muted client calls, when said clients are acting like real… well, you know, or if you want to pretend she’s haunting the coed bathrooms at Mother New York, and on the days you miss her most, when you need a little "shmermp!" to get you by.</h3>
+  <h1>{{{ title }}}</h1>
+  <h3>{{{ description }}}</h3>
   <div class="grid-container">
     {{#each clips}}
     <div class="box" data-clip="{{ file }}">{{{ quote }}}</div>
